--- a/src/components/item/item.module.scss
+++ b/src/components/item/item.module.scss
@@ -14,6 +14,9 @@
   width: 100%;
   margin-top: 10px;
   background-color: colors.$SEARCH_BAR;
+  &.selected {
+    background-color: colors.$INDIGO;
+  }
   .movieBtn {
     display: flex;
     flex-direction: row;
