--- a/src/components/item/item.module.scss
+++ b/src/components/item/item.module.scss
@@ -3,53 +3,53 @@
 @use '/src/styles/mixins/flexbox';
 @use '/src/styles/mixins/position';
 
-.searchedMovie {
-  @include flexbox.flexbox(start, center);
-  flex-direction: column;
-  position: relative;
-}
 .movieList {
-  border-radius: 20px;
+  display: flex;
   flex-direction: row;
+
+  border-radius: 20px;
   width: 100%;
   margin-top: 10px;
   background-color: colors.$SEARCH_BAR;
-  &.selected {
-    background-color: colors.$INDIGO;
-  }
   .movieBtn {
     display: flex;
     flex-direction: row;
+    align-items: center;
+
     width: 100%;
     height: 170px;
     overflow: scroll;
-    .movieInfo {
-      flex-direction: column;
-      flex-grow: 1;
-      text-align: center;
-      color: colors.$PLACE_HOLDER;
-      height: 100%;
-      padding-right: 5px;
-      .title {
-        color: colors.$BIG_TITLE;
-        font-size: 25px;
-        padding-bottom: 10px;
-      }
-      .info {
-        font-size: 18px;
-      }
-    }
     img {
-      min-width: 130px;
+      min-width: 45%;
       min-height: 170px;
-      max-width: 130px;
+      max-width: 45%;
       max-height: 170px;
       padding-right: 5px;
       border-radius: 20px;
       color: colors.$PLACE_HOLDER;
     }
-    .temp {
-      font-size: 32px;
+    .movieInfo {
+      display: flex;
+      justify-content: flex-start;
+      flex-direction: column;
+      color: colors.$PLACE_HOLDER;
+      height: 100%;
+      width: 45%;
+      padding-right: 5px;
+      .title {
+        overflow: auto;
+        padding: 10px 0px 0px 10px;
+        height: 90px;
+        color: colors.$BIG_TITLE;
+        font-size: 23px;
+      }
+      .info {
+        padding-top: 10px;
+        font-size: 18px;
+      }
+    }
+    path {
+      fill: colors.$YELLOW;
     }
   }
 }
