--- a/src/components/dragdrop/DragDrop.module.scss
+++ b/src/components/dragdrop/DragDrop.module.scss
@@ -1,38 +1,18 @@
-.App {
+@use '/src/styles/mixins/flexbox';
+@use '/src/styles/constants/colors';
+.DragDrop {
   text-align: center;
+  border-radius: 60px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.favoriteMovie {
+  @include flexbox.flexbox(start, center);
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: relative;
+  overflow: auto;
+  height: 490px;
+  margin-top: 24px;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icon {
+  fill: colors.$PLACE_HOLDER;
 }
