--- a/src/components/modal/modal.module.scss
+++ b/src/components/modal/modal.module.scss
@@ -13,6 +13,7 @@
   justify-content: center;
   width: 100vw;
   height: 100vh;
+  backdrop-filter: blur(2px);
 }
 .modalActive {
   @include flexbox.flexbox(center, center);
